# pixiv-download-helper

./: .gitignore  README.md
backend/: .env.example  GEMINI.md  README.md  pyproject.toml
backend/scripts/: read_metadata.bat  run.bat
backend/src/pixiv_download_helper_backend/: __init__.py  download_pixiv.py  image_utils.py  interactive_metadata_viewer.py  main.py  run.py  schemas.py
extension-chrome/: GEMINI.md  background.js  content.js  manifest.json
