[project]
name = "pixiv-download-helper-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "muesli", email = "lavenderfield385@outlook.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
